Fixed spacing and listing layout

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
 
 body, html {
-  padding: 50px;
+  padding: 30px 20px;
   font: 14px "Quicksand", "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
@@ -58,7 +58,7 @@ a.edit:hover {
   background-image: linear-gradient(#04a33b, #027a20);
 }
 
-a.logout:link, a.logout:active {
+a.logout:link, a.logout:visited, a.logout:active {
   color: #fff !important;
   font-size: 1em;
   align-self: center;
@@ -68,6 +68,7 @@ a.logout:link, a.logout:active {
 }
 
 a.logout:hover {
+  color: #fff !important;
   background-image: linear-gradient(#a80303, #790303);
 }
 
@@ -79,6 +80,16 @@ a.tags {
 .lh-list-img {
   max-width: fit-content;
   max-height: min-content;
+}
+
+.card-img-top {
+  width: 100%;
+  height: 15vw;
+  object-fit: cover;
+}
+
+.card-tag {
+  padding: 0 0 0 1.25rem;
 }
 
 /**** PROFILE *****/
